--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,8 @@ gradle-app.setting
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.gradle
+.idea
 # Generated files
 .idea/**/contentModel.xml
 
@@ -110,3 +111,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.idea/codeStyles/
+.idea/misc.xml
+.idea/vcs.xml
+gradle/
+src/main/resources/
+src/test/resources/
